updated ed board; removed old files

--- a/about/index.html
+++ b/about/index.html
@@ -101,16 +101,16 @@ column and its research basis to info(at)youngstatsblog.eu. The submission
 should include information on the author(s)’ current and past affiliation(s),
 relevant degrees or experiences, and the URL of the author(s)’ current webpage.</p>
 <p><strong>Editorial Board</strong></p>
-<p><a href="https://emanuelealiverti.github.io/">Emanuele Aliverti</a> (University Ca&rsquo; Foscari Venezia)</p>
-<p><a href="https://it.linkedin.com/in/christiancapezza">Christian Capezza</a> (University of Naples Federico II)</p>
-<p><a href="https://michaelfop.github.io/">Michael Fop</a> (University College Dublin)</p>
-<p><a href="https://www.researchgate.net/profile/Elena_Prada">Elena Maria Prada</a> (Bucharest University of Economic Studies)</p>
-<p><a href="https://www.researchgate.net/profile/Amirhossein_Jalali3">Amirhossein Jalali</a> (University College Cork)</p>
-<p><a href="https://www.imkemayer.com/">Imke Mayer</a> (École des Hautes Études en Sciences Sociales &amp; École Polytechnique)</p>
-<p><a href="https://genevieverobin.com/">Geneviève Robin</a> (Inria, École des Ponts ParisTech)</p>
-<p><a href="https://sites.google.com/site/andrejsrakar1975/">Andrej Srakar</a> (University of Ljubljana)</p>
-<p><a href="https://www.researchgate.net/profile/Raluca_Cplescu">Raluca Caplescu</a> (The Bucharest University of Economic Studies)</p>
-<p><a href="https://www.researchgate.net/profile/Fatemeh_Ghaderinezhad">Fatemeh Ghaderinezhad</a> (Ghent University)</p>
+<p><a href="https://sites.google.com/site/andrejsrakar1975/">Andrej SRAKAR</a> (University of Ljubljana, <em>coordinator</em>)</p>
+<p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca&rsquo; Foscari Venezia)</p>
+<p><a href="https://it.linkedin.com/in/christiancapezza">Christian CAPEZZA</a> (University of Naples Federico II)</p>
+<p><a href="https://scholar.google.com/citations?user=8PhJlmwAAAAJ&amp;hl=ro&amp;oi=sra">Raluca CAPLESCU</a> (The Bucharest University of Economic Studies)</p>
+<p><a href="https://michaelfop.github.io/">Michael FOP</a> (University College Dublin)</p>
+<p><a href="https://www.researchgate.net/profile/Fatemeh_Ghaderinezhad">Fatemeh GHADERINEZHAD</a> (Ghent University)</p>
+<p><a href="https://www.researchgate.net/profile/Amirhossein_Jalali3">Amirhossein JALALI</a> (University College Cork)</p>
+<p><a href="https://www.imkemayer.com/">Imke MAYER</a> (École des Hautes Études en Sciences Sociales &amp; École Polytechnique)</p>
+<p><a href="https://www.researchgate.net/profile/Elena_Prada">Elena Maria PRADA</a> (Bucharest University of Economic Studies)</p>
+<p><a href="https://genevieverobin.com/">Geneviève ROBIN</a> (Inria, École des Ponts ParisTech)</p>
 <p><strong>Young Statisticians Europe (YSE)</strong></p>
 <p>In October 2018, more than 20 of these representatives from 8 European countries
 met for a workshop in Paris with the goal of enabling more networking,
