--- a/about/index.html
+++ b/about/index.html
@@ -155,6 +155,9 @@ us by email and write a few sentences about yourself.</p>
 between the representatives from each country we have created a private facebook
 group. For promoting our events we have created a <a href="https://www.linkedin.com/company/young-statisticians-europe/">LinkedIn
 page</a></p>
+<p><img src="/post/2020/09/01/welcome/yse_logo.png" alt=""></p>
+<p><img src="/post/2020/09/01/welcome/fenstat_logo.png" alt=""></p>
+<p><img src="/post/2020/09/01/welcome/bernoulli.jpg" alt=""></p>
 
 </main>
 
