--- a/about/index.html
+++ b/about/index.html
@@ -93,6 +93,7 @@ Europe and its contributors are independent researchers. Their expressed
 opinions in the blog posts do not necessarily reflect the opinion of Young
 Statisticians Europe or FENStatS.</p>
 <p>Please check our <a href="/">home page</a> for the list of our post and the <a href="/categories/webinars">webinar page</a> for the complete list of webinars.</p>
+<p>Feel free to follow us on <a href="https://twitter.com/YoungStatS2">Twitter</a> to stay informed about new blog posts and webinar announcements. <!-- raw HTML omitted -->Follow @YoungStatS2<!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
 <p><strong>Submissions</strong></p>
 <p>The columns appearing on the YoungStatS Blog are commissioned by the managing
 editors. Academics who are interested in writing a blog-post based on their
@@ -102,7 +103,7 @@ should include information on the author(s)’ current and past affiliation(s),
 relevant degrees or experiences, and the URL of the author(s)’ current webpage.</p>
 <p><strong>Editorial Board</strong></p>
 <p><a href="https://sites.google.com/site/andrejsrakar1975/">Andrej SRAKAR</a> (University of Ljubljana, <em>coordinator</em>)</p>
-<p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca&rsquo; Foscari Venezia)</p>
+<p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca' Foscari Venezia)</p>
 <p><a href="https://it.linkedin.com/in/christiancapezza">Christian CAPEZZA</a> (University of Naples Federico II)</p>
 <p><a href="https://scholar.google.com/citations?user=8PhJlmwAAAAJ&amp;hl=ro&amp;oi=sra">Raluca CAPLESCU</a> (The Bucharest University of Economic Studies)</p>
 <p><a href="https://michaelfop.github.io/">Michael FOP</a> (University College Dublin)</p>
