--- a/seminars/index.html
+++ b/seminars/index.html
@@ -76,20 +76,17 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
 
 
 <main>
-<p><strong>YoungStatS Online Seminar</strong></p>
-<p>We are delighted to announce the creation of the YoungStatS Online Seminar
-Series (YSOS)! Our goal in creating this seminar series is to provide a platform
+<p><strong>One World YoungStatS webinar</strong></p>
+<p>We are delighted to announce the creation of the One World YoungStatS webinar
+Series! Our goal in creating this seminar series is to provide a platform
 for our community to continue interacting and growing in spite of the current
 health crisis. The Online Seminar Series will accompany the YoungStatS blog and
 provide insight into best and most recent work done in all areas of statistics</p>
-<p>Seminars will be held on Zoom on Tuesday at 8:30 am PT (10:30 am CT / 11:30
-am ET / 5:30 pm CET).
-Each session will feature a 45 minutes talk by an invited speaker, followed by a 15 minutes
-discussion led by an invited discussant.</p>
+<p>Seminars will be held on Zoom on Wednesday at 4:00 pm CET (10:00 am ET / 9:00
+am CT / 7:00 am PT).
+Each session will feature one or two talks by invited young research scholars, followed by a 15 minutes discussion led by an invited discussant.</p>
 <!-- raw HTML omitted -->
 <!-- raw HTML omitted -->
-<blockquote>
-</blockquote>
 
 </main>
 
