change category for  hron's post

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
   <div class="categories">
   
   
-    <a href="/categories/proportional-data">proportional data</a>
+    <a href="/categories/compositional-data">compositional data</a>
   
   
   </div>
