--- a/about/index.html
+++ b/about/index.html
@@ -107,6 +107,7 @@ relevant degrees or experiences, and the URL of the author(s)’ current webpage
 <p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca' Foscari Venezia)</p>
 <p><a href="https://it.linkedin.com/in/christiancapezza">Christian CAPEZZA</a> (University of Naples Federico II)</p>
 <p><a href="https://scholar.google.com/citations?user=8PhJlmwAAAAJ&amp;hl=ro&amp;oi=sra">Raluca CAPLESCU</a> (The Bucharest University of Economic Studies)</p>
+<p><a href="https://www.mrc-bsu.cam.ac.uk/people/in-alphabetical-order/a-to-g/nina-deliu/">Nina DELIU</a> (University of Cambridge)</p>
 <p><a href="https://michaelfop.github.io/">Michael FOP</a> (University College Dublin)</p>
 <p><a href="https://www.researchgate.net/profile/Fatemeh_Ghaderinezhad">Fatemeh GHADERINEZHAD</a> (Ghent University)</p>
 <p><a href="https://scholar.google.com/citations?user=Nj_wj-gAAAAJ&amp;hl=en&amp;authuser=2">Amirhossein JALALI</a> (University College Cork)</p>
