--- a/about/index.html
+++ b/about/index.html
@@ -109,11 +109,11 @@ relevant degrees or experiences, and the URL of the author(s)’ current webpage
 <p><a href="https://scholar.google.com/citations?user=8PhJlmwAAAAJ&amp;hl=ro&amp;oi=sra">Raluca CAPLESCU</a> (The Bucharest University of Economic Studies)</p>
 <p><a href="https://www.mrc-bsu.cam.ac.uk/people/in-alphabetical-order/a-to-g/nina-deliu/">Nina DELIU</a> (University of Cambridge)</p>
 <p><a href="https://www.researchgate.net/profile/Fatemeh_Ghaderinezhad">Fatemeh GHADERINEZHAD</a> (Ghent University)</p>
-<p><a href="https://scholar.google.com/citations?user=Nj_wj-gAAAAJ&amp;hl=en&amp;authuser=2">Amirhossein JALALI</a> (University College Cork)</p>
-<p><a href="https://www.imkemayer.com/">Imke MAYER</a> (École des Hautes Études en Sciences Sociales &amp; École Polytechnique)</p>
+<p><a href="https://scholar.google.com/citations?user=Nj_wj-gAAAAJ&amp;hl=en&amp;authuser=2">Amirhossein JALALI</a> (University of Limerick)</p>
+<p><a href="https://www.imkemayer.com/">Imke MAYER</a> (Charité Universitätsmedizin Berlin)</p>
 <p><a href="https://scholar.google.com/citations?user=a2ahoJIAAAAJ&amp;hl=en">Tin Lok James NG</a> (Trinity College Dublin)</p>
 <p><a href="https://www.researchgate.net/profile/Elena_Prada">Elena Maria PRADA</a> (Bucharest University of Economic Studies)</p>
-<p><a href="https://genevieverobin.com/">Geneviève ROBIN</a> (Inria, École des Ponts ParisTech)</p>
+<p><a href="https://genevieverobin.com/">Geneviève ROBIN</a> (Université d&rsquo;Évry Val d&rsquo;Essonne)</p>
 <p><strong>Young Statisticians Europe (YSE)</strong></p>
 <p>In October 2018, more than 20 of these representatives from 8 European countries
 met for a workshop in Paris with the goal of enabling more networking,
