--- a/about/index.html
+++ b/about/index.html
@@ -112,7 +112,7 @@ relevant degrees or experiences, and the URL of the author(s)’ current webpage
 <p><a href="https://scholar.google.com/citations?user=Nj_wj-gAAAAJ&amp;hl=en&amp;authuser=2">Amirhossein JALALI</a> (University of Limerick)</p>
 <p><a href="https://www.imkemayer.com/">Imke MAYER</a> (Charité Universitätsmedizin Berlin)</p>
 <p><a href="https://scholar.google.com/citations?user=a2ahoJIAAAAJ&amp;hl=en">Tin Lok James NG</a> (Trinity College Dublin)</p>
-<p><a href="https://www.researchgate.net/profile/Elena_Prada">Elena Maria PRADA</a> (Bucharest University of Economic Studies)</p>
+<p><a href="https://www.researchgate.net/profile/Elena_Prada">Elena Maria PRADA</a> (The Bucharest University of Economic Studies)</p>
 <p><a href="https://genevieverobin.com/">Geneviève ROBIN</a> (Université d&rsquo;Évry Val d&rsquo;Essonne)</p>
 <p><strong>Young Statisticians Europe (YSE)</strong></p>
 <p>In October 2018, more than 20 of these representatives from 8 European countries
