--- a/about/index.html
+++ b/about/index.html
@@ -80,28 +80,15 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
 
 <main>
 <p><strong>About</strong></p>
-<p>The YoungStatS Blog is set up to promote research in statistics in its broadest
-sense, encompassing all of its areas and applications, among other mathematical
-statistics and probability, official statistics, biostatistics and medical
-statistics, social statistics, economic statistics and econometrics,
-environmental statistics, statistics in natural sciences, data science and
-survey methods. The intended audiences are in particular young researchers and
-scholars in statistics, but also research community in statistics in general,
-practitioners in the field, advisory councils, institutions, academia, the
-private sector as well as journalists. The blog is hosted by Young Statisticians
-Europe and its contributors are independent researchers. Their expressed
-opinions in the blog posts do not necessarily reflect the opinion of Young
-Statisticians Europe or FENStatS.</p>
+<p>The YoungStatS Blog is set up to promote research in statistics in its broadest sense, encompassing all of its areas and applications, among other mathematical statistics and probability, econometrics, data science, official statistics, biostatistics and medical statistics, social statistics, economic statistics, environmental statistics, statistics in natural sciences and survey methods. The intended audiences are in particular young researchers and scholars in statistics, but also research community in statistics in general, practitioners in the field, advisory councils, institutions, academia, the private sector as well as journalists.</p>
+<p>The blog is hosted by Young Statisticians Europe and its contributors are independent researchers. Their expressed opinions in the blog posts do not necessarily reflect the opinion of Young Statisticians Europe or FENStatS.</p>
+<p>YoungStatS project is supported by the <a href="http://www.bernoulli-society.org/">Bernoulli Society for Mathematical Statistics and Probability</a> and the <a href="https://imstat.org/">Institute of Mathematical Statistics (IMS)</a>.</p>
 <p>Please check our <a href="/">home page</a> for the list of our post and the <a href="/categories/webinars">webinar page</a> for the complete list of webinars.</p>
 <p>Feel free to follow us on <a href="https://twitter.com/YoungStatS2">Twitter</a> to stay informed about new blog posts and webinar announcements. <!-- raw HTML omitted -->Follow @YoungStatS2<!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
 <p>You can also follow news about this blog using the <a href="https://www.r-bloggers.com/">R-bloggers</a> RSS feed.</p>
+<p>Videos from the One World YoungStatS webinar series are posted at our <a href="https://www.youtube.com/channel/UCEbKO91ilMIMXFIKjU-KdKw">YouTube channel</a>.</p>
 <p><strong>Submissions</strong></p>
-<p>The columns appearing on the YoungStatS Blog are commissioned by the managing
-editors. Academics who are interested in writing a blog-post based on their
-statistical research are encouraged to send a few lines describing the possible
-column and its research basis to info(at)youngstatsblog.eu. The submission
-should include information on the author(s)’ current and past affiliation(s),
-relevant degrees or experiences, and the URL of the author(s)’ current webpage.</p>
+<p>The columns appearing on the YoungStatS Blog are commissioned by the managing editors. Academics who are interested in writing a blog-post based on their statistical research are encouraged to send a few lines describing the possible column and its research basis to youngstats.world(at)gmail.com. The submission should include information on the author(s)’ current and past affiliation(s), relevant degrees or experiences, and the URL of the author(s)’ current webpage.</p>
 <p><strong>Editorial Board</strong></p>
 <p><a href="https://sites.google.com/site/andrejsrakar1975/">Andrej SRAKAR</a> (University of Ljubljana, <em>coordinator</em>)</p>
 <p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca' Foscari Venezia)</p>
@@ -115,24 +102,20 @@ relevant degrees or experiences, and the URL of the author(s)’ current webpage
 <p><a href="https://www.researchgate.net/profile/Elena_Prada">Elena Maria PRADA</a> (The Bucharest University of Economic Studies)</p>
 <p><a href="https://genevieverobin.com/">Geneviève ROBIN</a> (Université d&rsquo;Évry Val d&rsquo;Essonne)</p>
 <p><strong>Young Statisticians Europe (YSE)</strong></p>
-<p>In October 2018, more than 20 of these representatives from 8 European countries
+<p>In October 2018, more than 20 representatives from 8 European countries
 met for a workshop in Paris with the goal of enabling more networking,
 collaboration and communication among young statisticians in Europe. The
-organizing committee consists of young representatives of different statistical
-association from all around Europe.</p>
+organizing committee consists of young representatives of different statistical associations from all around Europe.</p>
 <p>The goals of YSE are:</p>
 <ul>
 <li>
-<p>To support the creation of national communities, networks and societies for
-young statisticians.</p>
+<p>To support the creation of national communities, networks and societies for young statisticians.</p>
 </li>
 <li>
-<p>To provide a platform for networking and exchange between national young
-statisticians associations</p>
+<p>To provide a platform for networking and exchange between national young statisticians associations</p>
 </li>
 <li>
-<p>To promote joint research and academic collaboration on an international
-level</p>
+<p>To promote joint research and academic collaboration on an international level</p>
 </li>
 <li>
 <p>To organize regional activities and events for young statistician</p>
@@ -141,17 +124,9 @@ level</p>
 <p>To connect statisticians across different subject areas and career paths</p>
 </li>
 </ul>
-<p>We organize annual events with scientific and administrative sessions. Romania
-organize the second meeting in Bucharest, 1-2 November 2019. We organize some
-pre-events during international conferences. For example in useR!2019 held in
-Toulouse, France, from 9th to 12th July. We support the creation of new young
-statistical networks. We involve people from other countries to be part of the
-European group.</p>
-<p>We include everyone that considers themselves to be &ldquo;young statisticians&rdquo; so for
-example, master&rsquo;s students, PhD students, postdocs and people in the early
-stages of their careers from academics or industry in the field of statistics.
-If you want to get involved in the organizing committee of YSE, please contact
-us by email and write a few sentences about yourself.</p>
+<p>We organize annual events with scientific and administrative sessions (first three took place in France, Romania and Slovenia). We organize some pre-events during international conferences. For example in useR!2019 held in Toulouse, France, from 9th to 12th July. We support the creation of new young statistical networks. We involve people from other countries to be part of the European group.</p>
+<p>We include everyone that considers themselves to be &ldquo;young statisticians&rdquo; so for example, master&rsquo;s students, PhD students, postdocs and people in the early stages of their careers from academics or industry in the field of statistics.</p>
+<p>If you want to get involved in the organizing committee of YSE, please contact us by email and write a few sentences about yourself.</p>
 <p>Every young statistician is welcome in our
 <a href="https://www.facebook.com/groups/youngstateurope/">Facebook</a> group and our
 <a href="https://www.linkedin.com/groups/12206228/">LinkedIn group</a>. For communication
