--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>About US | YoungStatS</title>
+    <title>About us | YoungStatS</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
     <link href="//cdn.bootcss.com/highlight.js/9.12.0/styles/github.min.css" rel="stylesheet">
@@ -64,10 +64,10 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
   
   </div>
 
-  <h1><span class="title">About US</span></h1>
+  <h1><span class="title">About us</span></h1>
 
   
-  <h3 class="author">YoungStats
+  <h3 class="author">YoungStatS
 </h3>
   
 
