--- a/seminars/index.html
+++ b/seminars/index.html
@@ -84,7 +84,7 @@ health crisis. The Online Seminar Series will accompany the YoungStatS blog and
 provide insight into best and most recent work done in all areas of statistics</p>
 <p>Seminars will be held on Zoom on Wednesday at 4:00 pm CET (10:00 am ET / 9:00
 am CT / 7:00 am PT).
-Each session will feature one or two talks by invited young research scholars, followed by a 15 minutes discussion led by an invited discussant.</p>
+Each session will feature two, three or four talks by invited young research scholars, followed by a 15 minutes discussion led by an invited discussant.</p>
 <!-- raw HTML omitted -->
 <!-- raw HTML omitted -->
 
