--- a/about/index.html
+++ b/about/index.html
@@ -93,7 +93,7 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
 <p><a href="https://sites.google.com/site/andrejsrakar1975/">Andrej SRAKAR</a> (University of Ljubljana, <em>coordinator</em>)</p>
 <p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca' Foscari Venezia)</p>
 <p><a href="https://it.linkedin.com/in/christiancapezza">Christian CAPEZZA</a> (University of Naples Federico II)</p>
-<p><a href="https://scholar.google.com/citations?user=8PhJlmwAAAAJ&amp;hl=ro&amp;oi=sra">Raluca CAPLESCU</a> (The Bucharest University of Economic Studies)</p>
+<p><a href="https://www.researchgate.net/profile/Manuela-Simona-Cojocea">Manuela-Simona COJOCEA</a> (University of Bucharest)</p>
 <p><a href="https://www.mrc-bsu.cam.ac.uk/people/in-alphabetical-order/a-to-g/nina-deliu/">Nina DELIU</a> (University of Cambridge)</p>
 <p><a href="https://www.researchgate.net/profile/Fatemeh_Ghaderinezhad">Fatemeh GHADERINEZHAD</a> (Ghent University)</p>
 <p><a href="https://scholar.google.com/citations?user=Nj_wj-gAAAAJ&amp;hl=en&amp;authuser=2">Amirhossein JALALI</a> (University of Limerick)</p>
