--- a/about/index.html
+++ b/about/index.html
@@ -91,10 +91,10 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
 <p>The columns appearing on the YoungStatS Blog are commissioned by the managing editors. Academics who are interested in writing a blog-post based on their statistical research are encouraged to send a few lines describing the possible column and its research basis to youngstats.world(at)gmail.com. The submission should include information on the author(s)’ current and past affiliation(s), relevant degrees or experiences, and the URL of the author(s)’ current webpage.</p>
 <p><strong>Editorial Board</strong></p>
 <p><a href="https://sites.google.com/site/andrejsrakar1975/">Andrej SRAKAR</a> (University of Ljubljana, <em>coordinator</em>)</p>
-<p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca' Foscari Venezia)</p>
+<p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca&rsquo; Foscari Venezia)</p>
 <p><a href="https://it.linkedin.com/in/christiancapezza">Christian CAPEZZA</a> (University of Naples Federico II)</p>
 <p><a href="https://www.researchgate.net/profile/Manuela-Simona-Cojocea">Manuela-Simona COJOCEA</a> (University of Bucharest)</p>
-<p><a href="https://www.mrc-bsu.cam.ac.uk/people/in-alphabetical-order/a-to-g/nina-deliu/">Nina DELIU</a> (University of Cambridge)</p>
+<p><a href="https://nina-dl.github.io/">Nina DELIU</a> (Sapienza University of Rome)</p>
 <p><a href="https://www.researchgate.net/profile/Fatemeh_Ghaderinezhad">Fatemeh GHADERINEZHAD</a> (Ghent University)</p>
 <p><a href="https://scholar.google.com/citations?user=Nj_wj-gAAAAJ&amp;hl=en&amp;authuser=2">Amirhossein JALALI</a> (University of Limerick)</p>
 <p><a href="https://www.imkemayer.com/">Imke MAYER</a> (Charité Universitätsmedizin Berlin)</p>
