--- a/about/index.html
+++ b/about/index.html
@@ -93,14 +93,14 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
 <p><a href="https://sites.google.com/site/andrejsrakar1975/">Andrej SRAKAR</a> (University of Ljubljana, <em>coordinator</em>)</p>
 <p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca&rsquo; Foscari Venezia)</p>
 <p><a href="https://it.linkedin.com/in/christiancapezza">Christian CAPEZZA</a> (University of Naples Federico II)</p>
+<p><a href="https://mariechion.github.io/">Marie CHION</a> (Paris Cité University)</p>
 <p><a href="https://www.researchgate.net/profile/Manuela-Simona-Cojocea">Manuela-Simona COJOCEA</a> (University of Bucharest)</p>
 <p><a href="https://nina-dl.github.io/">Nina DELIU</a> (Sapienza University of Rome)</p>
 <p><a href="https://www.researchgate.net/profile/Fatemeh_Ghaderinezhad">Fatemeh GHADERINEZHAD</a> (Ghent University)</p>
 <p><a href="https://scholar.google.com/citations?user=Nj_wj-gAAAAJ&amp;hl=en&amp;authuser=2">Amirhossein JALALI</a> (University of Limerick)</p>
-<p><a href="https://www.imkemayer.com/">Imke MAYER</a> (Charité Universitätsmedizin Berlin)</p>
 <p><a href="https://scholar.google.com/citations?user=a2ahoJIAAAAJ&amp;hl=en">Tin Lok James NG</a> (Trinity College Dublin)</p>
 <p><a href="https://www.researchgate.net/profile/Elena_Prada">Elena Maria PRADA</a> (The Bucharest University of Economic Studies)</p>
-<p><a href="https://genevieverobin.com/">Geneviève ROBIN</a> (Université d&rsquo;Évry Val d&rsquo;Essonne)</p>
+<p><a href="https://desanou.github.io/">Edmond SANOU</a> (Université d’Evry Val d’Essonne)</p>
 <p><strong>Young Statisticians Europe (YSE)</strong></p>
 <p>In October 2018, more than 20 representatives from 8 European countries
 met for a workshop in Paris with the goal of enabling more networking,
