--- a/about/index.html
+++ b/about/index.html
@@ -91,8 +91,9 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
 <p>The columns appearing on the YoungStatS Blog are commissioned by the managing editors. Academics who are interested in writing a blog-post based on their statistical research are encouraged to send a few lines describing the possible column and its research basis to youngstats.world(at)gmail.com. The submission should include information on the author(s)’ current and past affiliation(s), relevant degrees or experiences, and the URL of the author(s)’ current webpage.</p>
 <p><strong>Editorial Board</strong></p>
 <p><a href="https://sites.google.com/site/andrejsrakar1975/">Andrej SRAKAR</a> (University of Ljubljana, <em>coordinator</em>)</p>
+<p><a href="https://scholar.google.com/citations?user=JG-jP6cAAAAJ&amp;hl=en">Pierfrancesco ALAIMO DI LORO</a> (Università di Roma LUMSA)</p>
 <p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca&rsquo; Foscari Venezia)</p>
-<p><a href="https://it.linkedin.com/in/christiancapezza">Christian CAPEZZA</a> (University of Naples Federico II)</p>
+<p><a href="https://scholar.google.com/citations?user=dL8B3rMAAAAJ&amp;hl=en">Fabio CENTOFANTI</a> (University of Naples Federico II)</p>
 <p><a href="https://mariechion.github.io/">Marie CHION</a> (Paris Cité University)</p>
 <p><a href="https://www.researchgate.net/profile/Manuela-Simona-Cojocea">Manuela-Simona COJOCEA</a> (University of Bucharest)</p>
 <p><a href="https://nina-dl.github.io/">Nina DELIU</a> (Sapienza University of Rome)</p>
