--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
     
     
 Dear Followers of the YoungStatS project, Dear All!
-It has been an exciting year for our project, including 7 One World YoungStatS webinars and 10 blogposts from leading authors in all areas of statistics, probability and econometrics.
-In particular, we wish to thank our supporters: The Federation&hellip;
+It has been an exciting year for our project, including 7 One World YoungStatS webinars and several blogposts from leading authors in all areas of statistics, probability and econometrics.
+In particular, we wish to thank our supporters: The&hellip;
     </a>
   </div>
 
