--- a/about/index.html
+++ b/about/index.html
@@ -92,8 +92,8 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
 <p><strong>Editorial Board</strong></p>
 <p><a href="https://sites.google.com/site/andrejsrakar1975/">Andrej SRAKAR</a> (University of Ljubljana, <em>coordinator</em>)</p>
 <p><a href="https://scholar.google.com/citations?user=JG-jP6cAAAAJ&amp;hl=en">Pierfrancesco ALAIMO DI LORO</a> (Università di Roma LUMSA)</p>
-<p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University Ca&rsquo; Foscari Venezia)</p>
-<p><a href="https://alessiacaponera.github.io/">Alessia CAPONERA</a> (EPFL Lausanne)</p>
+<p><a href="https://emanuelealiverti.github.io/">Emanuele ALIVERTI</a> (University of Padova)</p>
+<p><a href="https://alessiacaponera.github.io/">Alessia CAPONERA</a> (University of Milano-Bicocca)</p>
 <p><a href="https://scholar.google.com/citations?user=dL8B3rMAAAAJ&amp;hl=en">Fabio CENTOFANTI</a> (University of Naples Federico II)</p>
 <p><a href="https://mariechion.github.io/">Marie CHION</a> (Paris Cité University)</p>
 <p><a href="https://www.researchgate.net/profile/Manuela-Simona-Cojocea">Manuela-Simona COJOCEA</a> (University of Bucharest)</p>
