--- a/about/index.html
+++ b/about/index.html
@@ -101,7 +101,7 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
 <p><a href="https://sites.google.com/view/lucio-galeati-math/home">Lucio GALEATI</a> (EPFL Lausanne)</p>
 <p><a href="https://www.researchgate.net/profile/Fatemeh_Ghaderinezhad">Fatemeh GHADERINEZHAD</a> (Ghent University)</p>
 <p><a href="https://www.ul.ie/research/dr-amirhossein-jalali">Amirhossein JALALI</a> (University of Limerick)</p>
-<p><a href="https://scholar.google.com/citations?user=a2ahoJIAAAAJ&amp;hl=en">Tin Lok James NG</a> (Trinity College Dublin)</p>
+<p><a href="https://www.linkedin.com/in/fatima-jaouimaa/">Fatima-Zahra JAOUIMAA</a> (University of Limerick)</p>
 <p><a href="https://www.researchgate.net/profile/Elena_Prada">Elena Maria PRADA</a> (The Bucharest University of Economic Studies)</p>
 <p><a href="https://desanou.github.io/">Edmond SANOU</a> (Université d’Evry Val d’Essonne)</p>
 <p><strong>Young Statisticians Europe (YSE)</strong></p>
