--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ src="cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.0?config=TeX-MML-AM_CHTML">
   <div class="categories">
   
   
-    <a href="/categories/directional-data-analysis">directional-data-analysis</a>
+    <a href="/categories/directional-statistics">directional-statistics</a>
   
   
   </div>
